crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_span__to_span_unit_struct.snap
---
source: crates/csskit_derives/src/test/test_to_span.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToSpan for Nothing {
    fn to_span(&self) -> ::css_parse::Span {
        use ::css_parse::{Span, ToSpan};
        Span::DUMMY
    }
}
